# aurpm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config  index.py  installrepo.sh  makefile  repoadd1.sh  update.py  uprepo.sh
old/: index.py  installrepo.sh
python/: README.md  makefile
python/old/: index.py  setup.py
python/src/: caution.py  config_handler.py  main.py  pkg_mgmt.py
src/: arg.py  aur_ask.rs  aurpm.conf  aurpm_repo.js  aurpm_repo.rs  config.toml  index.py  main.py  main.rs  pkg_management.rs  term_output.rs  util.py
